# Lang_Proj

./: basix_chains.py  chain_lcel.py  chain_runnable_parallel.py  chain_runnable_parallel_groq.py  chain_sequential.py  chat_model_with_user.py  chat_models.ipynb  document_loaders.ipynb  llm.ipynb  prompt_template.py  pyproject.toml  virat.txt
